<resources>
    <string name="app_name">Style</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="startLogo">startLogo</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="already_a_user_login">Already a user? LogIn</string>
    <string name="email">Email</string>
    <string name="new_guy_click_here">New guy? Click here.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="description">Description</string>
    <string name="post">POST</string>
    <string name="search">Search</string>
</resources>