<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/instagram"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_exit_background"
        android:hint="@string/user_name"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#00838F"
        tools:ignore="TextContrastCheck"
        android:autofillHints=""
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_exit_background"
        android:hint="@string/name"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#00838F"
        tools:ignore="TextContrastCheck"
        android:autofillHints=""
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_exit_background"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#00838F"
        tools:ignore="TextContrastCheck"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_exit_background"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#00838F"
        tools:ignore="TextContrastCheck"
        android:autofillHints=""
        android:inputType="numberPassword|textPassword" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/register"
        android:textColor="#00838F"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/already_a_user_login"
        android:textStyle="bold|italic" />

</LinearLayout>