<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StartActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/instagram_after"
        android:layout_centerInParent="true"
        android:id="@+id/icon_image"
        android:contentDescription="@string/startLogo" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:src="@drawable/instagram" />

        <Space
            android:layout_width="0dp"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#00838F" />

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/register"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#00838F" />

    </LinearLayout>
</RelativeLayout>